Depletion voltage for W5_E2

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -47,7 +47,7 @@ root of the bias voltage.
     23-FGR & 50 & n-in-p & -15 & $<$-6.32 \\
     28-GNDGR & 50 & n-in-p & -15 & $<$-7.19\\
     55-GNDGR & 50 & n-in-p & -15 & $<$-5.43\\ \hline
-    55-GNDGR-100 & 100 & n-in-p & -20 &  \\ \hline
+    55-GNDGR-100 & 100 & n-in-p & -20 & -10.82 \\ \hline
     55-GNDGR-150 & 150 & n-in-p & -30 & -14.86 \\ \hline
     W2\_J5       & 300 & p-in-n & 100 & 63.23 \\ 
     \bottomrule
@@ -149,7 +149,7 @@ The efficiency as a function of the threshold is shown in \cref{fig:efficiency_V
     \caption{}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.45\textwidth}
-%    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_C07.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_E02.pdf}
     \caption{}
   \end{subfigure}
   \caption{55-GNDGR-100 (W5\_E2): bias and voltage scan.}
