--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -25,7 +25,7 @@
     \caption{55-GNDGR}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.33\textwidth}
-
+    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_E02.pdf}
     \caption{55-GND-GR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.33\textwidth}
