Few changes on ThinSensors

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -89,83 +89,83 @@ The efficiency as a function of the threshold is shown in \cref{fig:efficiency_V
 %% --------------------------------------------- %%
 \section{Extrapolation to smaller pixels (CLICpix)}
 
-%% --------------------------------------------- %%
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_G07.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_G07.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{20-NGR (W19\_G7): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_G7}
-\end{figure}
+%% %% --------------------------------------------- %%
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_G07.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_G07.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{20-NGR (W19\_G7): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_G7}
+%% \end{figure}
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_F07.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_F07.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{23-FGR (W19\_F7): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_F7}
-\end{figure}
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_F07.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_F07.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{23-FGR (W19\_F7): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_F7}
+%% \end{figure}
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_L08.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{28-GNDGR (W19\_L8): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_L8}
-\end{figure}
-
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_C07.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_C07.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR (W19\_C7): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_C7}
-\end{figure}
-
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0005_E02.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_E02.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR-100 (W5\_E2): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_E2}
-\end{figure}
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_L08.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_L08.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{28-GNDGR (W19\_L8): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_L8}
+%% \end{figure}
 
 
-\begin{figure}[htbp] \centering
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0005_F01.pdf}
-    \caption{}
-  \end{subfigure} \hfill
-  \begin{subfigure}[b]{0.45\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_F01.pdf}
-    \caption{}
-  \end{subfigure}
-  \caption{55-GNDGR-150 (W5\_F1): bias and voltage scan.}
-  \label{fig:Timepix3_THLscan_Vdep_F1}
-\end{figure}
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0019_C07.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0019_C07.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{55-GNDGR (W19\_C7): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_C7}
+%% \end{figure}
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0005_E02.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_E02.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{55-GNDGR-100 (W5\_E2): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_E2}
+%% \end{figure}
+
+
+%% \begin{figure}[htbp] \centering
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/ThresholdScan_W0005_F01.pdf}
+%%     \caption{}
+%%   \end{subfigure} \hfill
+%%   \begin{subfigure}[b]{0.45\textwidth}
+%%     \includegraphics[width=\textwidth]{./figures/TestBeam/depletionVoltage_W0005_F01.pdf}
+%%     \caption{}
+%%   \end{subfigure}
+%%   \caption{55-GNDGR-150 (W5\_F1): bias and voltage scan.}
+%%   \label{fig:Timepix3_THLscan_Vdep_F1}
+%% \end{figure}
