[appendix_Calibration] added one plo

--- a/include/appendix_Calibration.tex
+++ b/include/appendix_Calibration.tex
@@ -58,6 +58,10 @@
   \begin{subfigure}[b]{0.45\textwidth}
     \includegraphics[width=0.9\textwidth]{./figures/Calibration/THLcalibration_W0005_F01.pdf}
     \caption{55-GNDGR-150}
+  \end{subfigure}\\
+  \begin{subfigure}[b]{0.45\textwidth}
+    \includegraphics[width=0.9\textwidth]{./figures/Calibration/THLcalibration_W0002_J05.pdf}
+    \caption{W0002\_J05}
   \end{subfigure}
   \caption{Threshold calibration for Timepix3 assemblies using test pulses.}
   \label{fig:Timepix3_THL_Calibration}
