[ActiveEdge] 2D plot of the efficiency for different edge designs

--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -513,6 +513,15 @@ loss of the charge near the edge as shown in
   \label{fig:55-GNDGR-150_eff_TOT}
 \end{figure}
 
+The edge efficiency in projected in one direction is summarised in \cref{fig:EdgeEff_2D}.
+\begin{figure}[htbp]
+  \centering
+  %EdgeEfficiency_2D.py
+  \includegraphics[width=0.7\textwidth]{figures/ActiveEdge/edgeEff_2D.pdf}
+  \caption{Edge efficiency in 2D.}
+  \label{fig:EdgeEff_2D}
+\end{figure}
+
 %% --------------------------------------------- %%
 \newpage
 \section{TCAD simulations of active-edge sensors}
