[ThinSensor] simulation plots

--- a/include/ThinSensors.tex
+++ b/include/ThinSensors.tex
@@ -86,6 +86,61 @@ The efficiency as a function of the threshold is shown in \cref{fig:efficiency_V
 
 %% --------------------------------------------- %%
 \section{Validation of the simulation}
+
+The simulations using AllPix are validated with the data as shown in
+\cref{fig:G4_simu_data_50micron,fig:G4_simu_data_100micron,fig:G4_simu_data_150micron}.
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_sizeX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_resX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/50micron_Edep.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{For $50\,\micron$ thick sensor.}
+  \label{fig:G4_simu_data_50micron}
+\end{figure}
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_sizeX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_resX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/100micron_Edep.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{For $100\,\micron$ thick sensor.}
+  \label{fig:G4_simu_data_100micron}
+\end{figure}
+
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_sizeX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_resX.pdf}
+    \caption{}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.3\textwidth}
+    \includegraphics[width=\textwidth]{figures/TestBeam/150micron_Edep.pdf}
+    \caption{}
+  \end{subfigure}
+  \caption{For $150\,\micron$ thick sensor.}
+  \label{fig:G4_simu_data_150micron}
+\end{figure}
+
 %% --------------------------------------------- %%
 \section{Extrapolation to smaller pixels (CLICpix)}
 
