cluster size fraction vs. THL and bias voltage

--- a/include/appendix_ThinSensors.tex
+++ b/include/appendix_ThinSensors.tex
@@ -46,36 +46,71 @@
 \subsection{Cluster size vs. bias voltage}
 \begin{figure}[htbp] \centering
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0019_G07.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0019_G07.pdf}
     \caption{20-NGR}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0019_F07.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0019_F07.pdf}
     \caption{23-FGR}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0019_L08.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0019_L08.pdf}
     \caption{28-GNDGR}
   \end{subfigure} \\
 
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0019_C07.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0019_C07.pdf}
     \caption{55-GNDGR}
   \end{subfigure} \hfill
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0005_E02.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0005_E02.pdf}
     \caption{55-GND-GR-100}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0005_F01.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0005_F01.pdf}
     \caption{55-GND-GR-150}
   \end{subfigure}\\
   \begin{subfigure}[b]{0.33\textwidth}
-    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_bias_W0002_J05.pdf}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_biasScan_W0002_J05.pdf}
     \caption{W2\_J5}
   \end{subfigure}
   \caption{Cluster sizes vs. bias voltage.}
   \label{fig:clusterSize_vs_biasVoltage}
+\end{figure}
+
+\subsection{Cluster size vs. threshold}
+\begin{figure}[htbp] \centering
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0019_G07.pdf}
+    \caption{20-NGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0019_F07.pdf}
+    \caption{23-FGR}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0019_L08.pdf}
+    \caption{28-GNDGR}
+  \end{subfigure} \\
+
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0019_C07.pdf}
+    \caption{55-GNDGR}
+  \end{subfigure} \hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0005_E02.pdf}
+    \caption{55-GND-GR-100}
+  \end{subfigure}\hfill
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0005_F01.pdf}
+    \caption{55-GND-GR-150}
+  \end{subfigure}\\
+  \begin{subfigure}[b]{0.33\textwidth}
+    \includegraphics[width=\textwidth]{./figures/TestBeam/cluSize_THLscan_W0002_J05.pdf}
+    \caption{W2\_J5}
+  \end{subfigure}
+  \caption{Cluster sizes vs. threshold.}
+  \label{fig:clusterSize_vs_THLscan}
 \end{figure}
 \newpage
 %% --------------------------------------------- %%
